# projeto-jogos-digitais-server

./: CMakeLists.txt
Game/: ClientState.cpp  ClientState.h  GameState.cpp  GameState.h
Network/: Addresses.cpp  Addresses.h  Defs.h  Logger.cpp  Logger.h  NetUtils.cpp  NetUtils.h  Packet.cpp  Packet.h  Platforms.h  Socket.cpp  Socket.h
Server/: Connections.h  DataObjects.h  InputData.h  Server.cpp  Server.h  ServerOperations.cpp  ServerOperations.h
Source/: Main.cpp
Utils/: Math.cpp  Math.h  Random.cpp  Random.h  ThreadQueue.h
